updated cloudflareddns config

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,38 +1,38 @@
-#ENC[AES256_GCM,data:7SJ9R/48OJ7nViMIVdhRqHzNa5pGW1bBi3jKG9Fc+3MbV7AyUDe5VLSWut/vC/yeXBy/VMpDpMHlN76srZsIVyw=,iv:o7XIqebqLZCQlXvcGrx1E4sQ6ZkOFY1+xY2E7vIqheo=,tag:6zuGFi9L895UNUO+TPlCXQ==,type:comment]
-#ENC[AES256_GCM,data:K6gP2sG6ExXsfl7y6SYTTD9we+CIUWCkocU/RWF2r9y7fpLph0vvBtxjB60=,iv:3gAru9a+QDUsrndZyEO7PbrPdu8ibKBxDE8HfhKY5ho=,tag:d0fgC149Lb/A/OZJ/troLw==,type:comment]
-VIP: ENC[AES256_GCM,data:yWUeRyhQOLb8bnzVxQ==,iv:c+Qs52iFPmRxGXoy0SM4P+jdEnbhLYynRLWMlDPG0fc=,tag:+qusynClFc6Ro8j1gsKBUg==,type:str]
-#ENC[AES256_GCM,data:Rco7Y1AE3z5zpszC8/IqbdC8m/AC85xLgSVP,iv:Zmy+okD87zzdsOzjo6TKFe06qJeUV9cxhapHUisH8tY=,tag:AS0d3T+kC9gmrHrQUiJ2dQ==,type:comment]
-#ENC[AES256_GCM,data:oKYcTv76CtS2R6643/P2wGz4XgHS/EVAzoAXM+vpSjVut9+22Oj5UxwS6vDBncQl0BTlPVoVzswoqjcXUediQ9cIHiQMTYeWv/UTTLHN2QULpL2uH6dq/Eo=,iv:sU+k78yf6TnTZektpDFu4QO4AbL49YchWHGYagInsvQ=,tag:RB/o9MyeYnUGwcwq37GkOA==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:GEm5yn5+q5dVw5so91w=,iv:4c88P9cqpVvCPQ9W2mIJtoFFuIRXjl3wC71XVV38/EE=,tag:IBu32Hwm+UPB9Od/2cHgGw==,type:str]
-#ENC[AES256_GCM,data:HN1+j8pAAVZxOtbItqKwBNn0zoDhy7Y4A6y7xJ39QQcGkw==,iv:lihVXfPfy6BIqv9jWvbY5A/nmQgDUmTpcSJp8cSC/qc=,tag:YiY7GPtr+rwJigyVpSZ3Ow==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:B9XQ0gXfJYow5HyRCw==,iv:oc7vp/tVBZUdsbJgHSdUONjbtsbmFFC4gbToGqodrcE=,tag:enIEGFc3XQjvkjliIB90pQ==,type:str]
-#ENC[AES256_GCM,data:UnxkbjuJaGUjVQj+kwyWBrpowcRuQn/6a8D1PRICos6dOtdbpgT9D+OMrQfSIUE=,iv:WGmh6v3M3LODDhXNQqlUM0TeY73NYRoWxf4MOiBMrFE=,tag:FG5B7y8SR5ptWQNcheksuw==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:4FYGmv+Ial8mWsBF2Prv3FCf6jAhltWrZ4soVUsXDA==,iv:93SkFaAxdRnL+ia1UsCZlFE2z4SLT1RPbNKgXgQhLEk=,tag:bWlikHnW7ACBpuVmXb4C9w==,type:str]
-#ENC[AES256_GCM,data:1R8jS7YnmtDkewENK23v5cxtzLbA7BocvfWZQpKGInyDOCGHNEuIzNa/tfOTeeWEs0Gk9csVt+9QG7lsg6uKHSFQlZ8AJ1rdmb7UOBiFtNfzAg==,iv:7ojYUyJxMUWtdrwz5BFlepwhnEqWIjkFPX91oOR5ep8=,tag:dLyqLi3WxXO0PSQZVtYKCg==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:WBs0pnuPO7IGrH8dVrvR,iv:PwRp+NXw5gkn4PVEVk4fjU4KCh56hL1ud/Txt69U4N8=,tag:UKMl+GBsR07h77gJV1cqyw==,type:str]
-#ENC[AES256_GCM,data:/PLTOZp6E48K67uCplnwAMO7HEdpvbWxV0NLWffXIHCJ,iv:pUxPIyuXHzt4WoMd6WZBudmIKHi6JVfLhJH10KYEHMw=,tag:W/C/KfS/emEx33TFOl7cRg==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:ie3UcJkU0FIU9pQpnWxM,iv:wAU7M2HOd6KVxadQmvfhSy4eJ5SMuLFhSkEKUwtBg14=,tag:iUaK+b0cYITOhMkTPaxzRw==,type:str]
-#ENC[AES256_GCM,data:6Ou5Ucv3+7ujS7rBA/9nanldSQ1fQHQOkyk7hdAwujW86dg0hRWrltSF8vUmdkxsKA5M3w7q9g+Fm9G++UZXIfXvembxR8WX9p6CwKJTrRU=,iv:S14IXJbuGwBYvWFlSTADwtWVUs+WevDAdnbG+deF2Sk=,tag:6J6Cd8Jvww4RiA7yKjP8KA==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:va/KMNJzPkCQt+3ahg+X,iv:b8i9ZZHSweMAV2bhM25js43e92Yo5ht3QcTz1r6majo=,tag:Cr76SXdF5ZNLRh0/gZpCbg==,type:str]
-#ENC[AES256_GCM,data:RZUTQvo8uphbHwsTkb9547ceDJ4b6bi6uoRCpW3rXbHKD/KmvuFjdhavQBRqejH9LMXN/dzIKGvSEAdpLr2+lEjlaIJfAOYL9qohj+ElL7BIgqgqg9WE,iv:rcVPBbuXfs6nNwPVEfEMCArDy2Rh72Af120t4IsMUPQ=,tag:Y/jKxaIYihhLLbj7nm1+8Q==,type:comment]
-#ENC[AES256_GCM,data:lveIKVZDQooB1bQAhD+aHGGYKWgklIVCvgvsI8ynD3K3TWhrF1F60eRdrE4pEK4W7zGYCS8cG52KTOdFJZYFnrxkvUZb29L7H1tAmu/ygSm1yic7WSNTIoZAVb17xyT4hkjWW2LyHou/PzImHYmHKSotjS/r3jdCmVe2cA==,iv:jVplyq08pILaeyebEMmQVpi5VFFPf0RWxKo5Mtngg5U=,tag:LTpWZoYCLPjuNNSjVS+qZA==,type:comment]
-#ENC[AES256_GCM,data:w8X7afiXpNZ4X4Loh9ySdeeW4uV2d/GmRpEkp6UyPE0wzVwr7siHS7knOIc1vJXzveOfzwVXlOPJsyIhB0X4Be+wAeiZsoP5AXP8c1UBsJk=,iv:q2HnIx9ctToCnXf6kJvAQLNX9kBCDZlhVXf8DENX/ww=,tag:foJuPH0CNwuocsfBCDqDhQ==,type:comment]
-#ENC[AES256_GCM,data:+/NZ1Qg3ShUM935B0oaHX0Px7IKydK7E9T1IfPhMqFR7ZcN4o0uzp2rUevPcx40WgfD8vH3Z,iv:7Dwc53TxEeWJBozKB4GnIEfzbbk9yCRORKlEywhYmwQ=,tag:SUiHdOyJy63Ks/Dk9il1tg==,type:comment]
-DDNS_URL: ENC[AES256_GCM,data:r+8kjFBQQManFG0EGPc=,iv:NpfJywZmrPMPEvfSWEbUGWRXqpzCWX57F5Kcv6ez1Hs=,tag:ULTZubu7Qct0WxODS3ecwA==,type:str]
-DOMAIN_0: ENC[AES256_GCM,data:g1DBfgEGT4T5heSY,iv:3fot+yDp3Yyk3FAuYSdpzWK+S9WoOdOc74sVywEK8YE=,tag:wpzPsS32sCacBzFB+l2iXw==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:Rr8JAFikqIIJBXKbuHDRnm8=,iv:5F3qbLH7W2IBdddHfZqnk5s2xavqY8broymad7mIIjI=,tag:4ATXfA+eRRL7hWEpJB5sIQ==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:awC8bsA1WLKzWbYRnRRNUCEh5FbyNjYYRz2NV/MdSsLBRSdCGq5t1A==,iv:H0vguw4E8CyNjP2uABIxzdyO17Vh/l8QvHWezZA5V8M=,tag:tsdWEZbcEZ5aT+DqF3pNFg==,type:str]
-#ENC[AES256_GCM,data:fzkT3DKntvYfnmEjvgHKvncHSavhLclRJFkMrCH3Z0i1xhzTQMubPaqkTzUEj3iIHTLgquvwxco=,iv:snEE4cgUYc353u006wjlFjwL1n1X+na3/fLL2Si6TjI=,tag:MsPx001f9/DRehiYMBUG1Q==,type:comment]
-#ENC[AES256_GCM,data:BJixeFYR8fOkIAEcP2uCfbwzsFDNu4R5LQ==,iv:t6hi9xq0Azww5wQYydPG2zsa/XW/Lm2YsF6BjP65Ziw=,tag:eFn2m/Pi0m6U7Or4XCvBKg==,type:comment]
-#ENC[AES256_GCM,data:8q/YTA/1ywxa2taMAGFHWli5Ae1sWDKqpig3NnkoBFb7qtyrmZQSeVdIz1kW3XzjqjEaJ4yaQAA0iAawVgur33dkRKHqWE+mMFLVo3Y=,iv:LBhyC8jBvRCQ7uKQC89t7Fzhr2l18s8PYwV3jdDpsyk=,tag:u60wyTT87htOjQcpdr/OJg==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:fs1OMk30FBWmQ4/o90K6DfD2x/KimY29nIxHHh8wpdviUzW4PoqkzGSJ9nOXQh1I,iv:VinWXu+WW6s4qUCAcDfOt06cmJW720AvlvpkDrwQRSE=,tag:itHkJfAYkOwHdM8K+7Yzpw==,type:str]
-#ENC[AES256_GCM,data:F/SNMTyPAZKQ4tzlFyxHui8vr4sog64BZAi2S9rdOsKa4/X3WI4G82/DHH9i4cfwiaFrl3VUWFmVLVUlDj2xKvZ83Yz8sfw=,iv:DXIr7Hgma0rriX4iPCwn0h+URxSbE2GknLbuC1Y8SeM=,tag:N2BluawHIgqJ4eyLN4Acgg==,type:comment]
-#ENC[AES256_GCM,data:h/E8kX8QZ5WsqSmcarphbdfY1aIQovrqqItV5eQYqLDzRpgX/NHM2lz+5md1yD+KFsQHZkUl,iv:DIIichud5Mh5DTTPecEQ5y1rnlqtDtPU5+uxU3oJSRY=,tag:qyI0/5XvzGHwNZrn8px9MA==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:tSzas2UmyQ==,iv:INliDbkS9CmKKbV9gKsvqPY8IsvOXx9SliilNPtmMsA=,tag:a1T2wIb2EVnzxXYNXyyzUw==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:TSNp87zDm0+PcKNkHx0fa1hSJos=,iv:hRYRbeG3/vZd9nMzHFfKoVVlgtHmOQhZeMpdG7PoGEU=,tag:qXAOBYKNWVQmTKM+OSR1nA==,type:str]
-#ENC[AES256_GCM,data:UK+GmWyL53l55eP4FJ4=,iv:Wh/6qP7tiivz5ZLIYHmijTJkd3q+Wd70FgXhmF/+ofY=,tag:ozG/zlCYp/kgkgGasXFGAw==,type:comment]
-PODNET: ENC[AES256_GCM,data:skHLCve2ot/LM55/DA==,iv:ZCpajZ2ojS1ahwPVNmYDUubvv6WYRPC05/msPIf7Uls=,tag:a46sQ2J7dheB0/73fVokzA==,type:str]
-SVCNET: ENC[AES256_GCM,data:xMeOSMAy7R9tbKBlFQ==,iv:z+QFhNcey8g38FtePYmwHCO+469FmVRr4xA9PtXRU8U=,tag:cBMEzXHraqmP81InFjk++g==,type:str]
+#ENC[AES256_GCM,data:yzNf9XyIOOwtBj3MUcE87XSGGVd3PZ4gAfuIMbLBXWYEncpZ8hXfJJPiUVeQXDerZWQ/jY6Aic/vFYmBX7v8PL0=,iv:98sGaE29G4tOJFOP7EkjYY5diCIuZDJ9T4f87zKBdME=,tag:/PMXSPxMCUmosoGNaOtdKw==,type:comment]
+#ENC[AES256_GCM,data:+XZbA4f8ecqNGkUoKIHXwmheTbo7QXCUefT/Ts3JPM7D7Il3RFsFguIWzmo=,iv:KaFaJehYopnZ6ohqAmM69b7SShnBl3bwYzfaJD1gaEY=,tag:wiAu28vjFStpyPuud3AqsA==,type:comment]
+VIP: ENC[AES256_GCM,data:xxX5KqyHh7Y1H5gZ4A==,iv:QTdHwhxPU3lOHECbbFkh09EuRApYSCh31tBT/jEm5qA=,tag:poUTKuhNy2Xh7nIjTnxxjQ==,type:str]
+#ENC[AES256_GCM,data:F0LTDDed+Z1N5KJA3pA7BASQSPUtpxuHueOF,iv:4v/YnzODHijqOGa7jqWgUc5pD+ME2cABxS/D96BhDKY=,tag:spxnCszMMB2XyT3yr04rYw==,type:comment]
+#ENC[AES256_GCM,data:kZirKuDPxQHZAQO0G90qCuPqavjYjlTNfXuv7HZ17/VznRaMAg6H0L8jevgjgubRDgHvXt0KfAyGMNqC4KS4QgeV4FS6IngK0gtpul9INZUDvEcB+KFL8N4=,iv:tlFVAl2TbJ+jmKCevTVqSm2wwsTwKbeyRzgP5mihJCs=,tag:tV04kMbrtATjfplJCByhYg==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:V1lraubg77RunuC5T0o=,iv:xSR8sved4tHikgyYx3sM3VMxA+8+NIQNyEcROs7nMTQ=,tag:JSQFesLglwBRkRO7bTRp2w==,type:str]
+#ENC[AES256_GCM,data:OVUW+q0LVdca+jM+HVCtgROHoS3HfhcZ5WQz20JFsH6MEg==,iv:6Sv8M6T+qBQ0sg+qwKL/iuHYmJQxKmfAwuUNf2LL0Rw=,tag:37ek6plPiKJWMvArCNeNvA==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:yebCoKmjilWNvk78dA==,iv:dv5+Vsp5/sWzFSw537aW67em9K0cLpFKksEa0BmYYsg=,tag:eD0D5riM1YTDd7b4xdc9Uw==,type:str]
+#ENC[AES256_GCM,data:XoKRN912QvByp6b03GDkjEXQ5pAhUz4sGtzyjRGR4JW8duWKH6EzZbqiU2gTpq0=,iv:XtjQ70ZS3u9HQP015KMoTEsT/1bOnzRoTYnpzLCjJfw=,tag:bAAy3C1thrnyn4jD1C2sQw==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:3aT7Zx1mCnuDLZw5DRrd+9mfcuKC2N1iQUs69+vM6g==,iv:UqDL86TMUX3dkTW7in1WeFAJjr5VRxldhLa4fQZ119A=,tag:akrerFi84MwRbuQf5Q9mHg==,type:str]
+#ENC[AES256_GCM,data:nQ9yQdhGbYHEvfWHQEe2mX9wphHvaef2bqejKry4jMjgU3mmfyYJXPCoHMzVbycDB44F5aeE9muVOncAGKsfy/FDd0/wYFRk5rzpIGLmzC/r+A==,iv:uqdzoSuDRwImH4uqlex6ln/2pmKcNeqcyMU3b2sAxaA=,tag:lv/qwX4CZHMNXgESTCXNuQ==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:94grk2wdUEEZRGpcKBKH,iv:mFsQUHnBrqX45aRn/aH1DiQCUmwAqjIjwnoSzhG9rss=,tag:4KT3Xl8T8w97yq4lNZs0uQ==,type:str]
+#ENC[AES256_GCM,data:C2Qrg3zx2Ya+APGOyeYynUH6U9iaB0YD7dagBNQ+pW62,iv:KTovp610UC+mR2nRNl5x7DRTsZLZCapFXgC1KS4dt6Y=,tag:Ucz3GkIlCmi9N4gJrTpyyQ==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:r98L5bqAognh53Eks+Kt,iv:kz6W+ZWqWROjkb5xkHS+k5ETZmk+nolyWW71BydCUnM=,tag:9Sq41e4g+LrdtUZpvvbtxA==,type:str]
+#ENC[AES256_GCM,data:aW3f73P/GkfTV8TNxkGAWjYj0uJLbwQdmF+Qe2MeGH6d9qqJXXHw3QtKwF6Cg/qEgljAu0ew7HjWKK3sQNEK3Ahe+MyA7xnBQxXXQmjRc0E=,iv:HCcuP3dwnKxePJbDNNZLBdYsminwp8vKDmxEdXd8pco=,tag:NngVUi7PO1bd4lhKtd7bKQ==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:OGazZRhVh+TB40smLTZ+,iv:H98poX9d1g42g7n6ITjaZyq9ON8Ilf1TchSzDmoqlmM=,tag:zFelxPJaKey9WmW+K5b6+Q==,type:str]
+#ENC[AES256_GCM,data:cZWZRM+cdxm+wyBvLkCVHebSP7DPrnR+Nplo+mxBKTKPR3f975f/TUtKqyvreioIEZrxWTR5OFZPpCF0B5nkq5/K/4PKh1GBs3zSk4GwSUANUqDeRcs7,iv:d8L1RbObO/6uSArD5GLxPuWCrl1JKRh/FnjD4VBrl+A=,tag:+Nk9j8FoO8UW6IOfM7uMXA==,type:comment]
+#ENC[AES256_GCM,data:t0JusICVHDjKcNJVuOZb0RxeSpuBnZE7rULDLWmFSw1dvu8PEulx/EdsPFN2oTTmZNkpD5hauHhTXSPFGuK3eHdwj5rmocGvWRpj43Ptasb3jzBQ4prHGazWfsGR8bq3oLQIzvx45O73QPlOd/2g328EdYSR/hcL1RzFTQ==,iv:94cTE7uYJOeGg0Q/66OJzTXtyqnmf6sY0ERYMJqSCXQ=,tag:8Y4u0XedBh7avCqgXILpOA==,type:comment]
+#ENC[AES256_GCM,data:TS+9q1tNJBTc5typ4aLG4e6nO0BHEbXfV0Fz/XdVUfV9RZMcQQyC3oX+LL79ycNIblLxFyNQgX6q95+wXKak4qDM9dBYxkbdnIx/x/gU1h0=,iv:umUXUvOLVf9sBJHvIv6i43K3+pH/2zMeGFBtTBEnnvU=,tag:KfEtuO/nFb110izMBy//xQ==,type:comment]
+#ENC[AES256_GCM,data:r6dpeziUzGxnBHW70RMPZ9dlX4SBpt+Oe2QVc7j72LQ7sJHXs+J9offy56nY0dC65MUYgnAE,iv:SK0px7PLp1k1hHY4l7zRWQeMYua/pwi2Cbw6xpAoEiM=,tag:2yC86caBSryMLvdluCkO4g==,type:comment]
+DDNS_URL: ENC[AES256_GCM,data:T5Vm71gHgUhZESBMw1Q=,iv:ZheAfbprqvrNe4fy8WkgNlh2a7bx+bbEWkDPKGuSZe8=,tag:+lgrBoSSchfYe0ABmPrHNw==,type:str]
+DOMAIN_0: ENC[AES256_GCM,data:2qr6A9Dx3dyl1GaW,iv:oaewNVCFWdI3VXdC7J45MVeXALo8mLOfMCiM6ftGS1o=,tag:F9LFPF2WHqKOl8CVzJ0GMg==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:lGr6Y9a7v00PCqDji8wzmv8=,iv:PlBhsd80NhidnaF7bZhvW2CZVHAjFXrSKW/c9dF2wDc=,tag:5Cnea+Vl+OFDmcwft20vWw==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:OIIIaj2LdgD4Q/dIPgz2lwxubB9sqdYJyAGsC1xuKMZZy5wKWHBPeQ==,iv:K4KhLlELI63NE7n48lOKEfBE4XG1/wTW8syKMKlj8do=,tag:fKYjeUMfuTMdtORI0zBJ/A==,type:str]
+#ENC[AES256_GCM,data:sElDZUWuWzQIS88UWbZ/kaoqXtWsN+r6x5m8wo8P/O/3zGgo61RtU6ZXiYK2u9ZSQEmwbXU+ZGE=,iv:gt35/8+J7YgQ3LIJ/eOfIpi6HsCNkXe7IpLhbdr2zgI=,tag:ibcHmcNbvUAxDW4IoXXtdw==,type:comment]
+#ENC[AES256_GCM,data:LiLNvXt9A1Hka0BQDLxhw1ymqPsR/+8DoQ==,iv:GOFJkj/NAjYR51ihUCMfxkR/X0JWvuXQRmfQ7F6VqOM=,tag:DsOnGpG3acLcyGZnYdPSig==,type:comment]
+#ENC[AES256_GCM,data:nxVOGsQKjmd1C7EuZv/p+g8SfQywTu/+6p7FdO1wR7xGpnHcyIBDN9l88g8KhDvC70Ap7TZbLZUZ7jIr0sEWxvpD0qGCbikBnxcDG0I=,iv:gUM1BLatGGNhn3BRRcztkB2IZLyQllmUAqwzhr3Nq0E=,tag:O3Rw8ioB0OWSt/ZiAMn2dw==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:XLfwt2iIRX2EflixeK7M0y78+kqUbf6wCnbLoleW0OuOoV0XsWGeMw9Iwj+7qEpr,iv:+RwdKwKX12E3HttlUnbISfdiV5eWTFquqBXnWiAXl9U=,tag:iIHkRvxRbZ2iLyRivMn/dQ==,type:str]
+#ENC[AES256_GCM,data:7hVt2CviZZBO/x9ylAUJP0jMv3JMepvO6IVQQyc5AovL3P741HtKz7XCF3A20NNtwLieTVG+nNatgo8MXboeFl36O34xSqw=,iv:BXoHCpATROd/+h//XeIDEsyhP6fXCWzdlnt80hc0Tzw=,tag:tObf+7a79ZNUZMYyPZL87w==,type:comment]
+#ENC[AES256_GCM,data:Z0yFswQ9ryP+PurYbst8BFDrTiqQ3u+c5A3N+1Rz3SCQ3wqdplPqPC0aiCsWKQZ3aEyEQ9dP,iv:wZ0Ibi16sX5skxpQ5V4pn0lziDuxm7pxPxVTO1CIyXs=,tag:QUujLwM2XGU6Ighw1il9ng==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:MdJ7lT0vqw==,iv:23WHDSthe0ZSS7rC8jyDSbJvnoyN6/aUw91/SeAEaSw=,tag:E2yrCFI4rK5r9mR0xot3VQ==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:Ks7k1AFIuR4iInMBPx5gUr57PYg=,iv:t+nNZlWSY7rC4YsD/i35b8HZlfh0zA8pnEnfQd6O2+E=,tag:XJAG2A3kfxTBmZIc44m3Vw==,type:str]
+#ENC[AES256_GCM,data:9to/NE4y1BvzUNxc1ts=,iv:oKAyh+uwlxyn8PchBsJ6NhbcFL6vkYFbmRGIwu5mYyI=,tag:Wn8wwcVykciL47U7w40yHQ==,type:comment]
+PODNET: ENC[AES256_GCM,data:czj1BCzejP0Fd2Z9Vg==,iv:iEEEu4d6198+vz14GODL/2dZ4n6qvYAkGR/KZ2CFHSo=,tag:aFjR920T0AaMEMUdjCa19g==,type:str]
+SVCNET: ENC[AES256_GCM,data:VWXtJKRvV/qWtnNKfQ==,iv:PElkOSMLLdZgv0j0LyJf3byjgbg6P3ucU/5wIKLLruA=,tag:so2H3ruqdoMnNSIjzEhRDQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -43,13 +43,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlNE5lTkJWcFptYnd4WGV6
-            aUxWM0ZIZnpFWkQyZ3JUYWxjdjR4clZaaUcwClRmdm0xNG52L1lmbWpxNjI1a3Rt
-            RmFBYU03dDNNR29wR1ZsTWNzdWcxR1EKLS0tIFVZR2J4eFFiQXZQK0JzMUNadTNk
-            UmZMU2RyTFJsWEN1NDJYTGw4Y0tuWUEKkChVX3tAB2JYwfnk0nFxZDgbtpv6+YAE
-            gKgEsQzAa/9ExLtO/B8+iUvw1aPJPOWrBcrdy064Xm+f6EH6jyj+TA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkV0xmbDJ1K29yWFk4U1FC
+            YXN2RGVnTVZWRzYxSWI5TEdSYXJ0cnl2MW40CkkvQ3RCSjhxa3Z1eklweHp1K3ZH
+            eDFmRFoyWlVLcEFNbWxYa2lWQWpNRncKLS0tIHZyNjY2VDQrWHk2UWJRMkJTbGZs
+            cGpoYkVLV0c2S1BCSlN3amlhb0VONXMKM1jb1gMGfUgroehRaJSXQW+Y+YBRiYSh
+            mBCeuZmQAJ/hX2JxJ+aB+e3pbL/Za24n4aAm88UNKHOONHHAGRSq/A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-25T15:47:33Z"
-    mac: ENC[AES256_GCM,data:f0H1UQ2Ms+Cr3ll4XKDlzDfovf8mLHruQjBVKukJmB121DzkkGee/pf6hR8YvxEIi6fIGlns5kWMOzwS4c9PeoPKgX0G44QfBnPasLQBJR1tWOYBICaQ2nCBF50t8DB+dIRUQhVekllbsA7mvTLbiGPacgNB79aStA2QsULpbyo=,iv:s5fiwW2mT8vuSAiRdV2tBs6UmYYr+mQAaj9IhA+NRNQ=,tag:JzLLMQ8nMwQd85n91QuH/Q==,type:str]
+    lastmodified: "2024-12-27T00:35:50Z"
+    mac: ENC[AES256_GCM,data:nfLX8yGiWdd2JrFsCf9Exmf5LJJsruJRVeWVyjSljJepXMymRzGckpqO+JqlysIOssT6X/wIn9g8fQyU8zknvYy2nuGJNXuyi6wXNz3W92/kXljOroqsoQiFqRuz1bS57cTKD4g6LHaWIUKy+3CzjXUnltybUJI1vcG5z9Xs9So=,iv:GSUiFFgWJBq+yyBzZWNcBzgyMQTY7PMEd9yqvtOJgFA=,tag:SwZEJA2NYPCEpyX2zMLYiw==,type:str]
     pgp: []
     version: 3.9.1
