--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,42 +4,42 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:XvGUYuMXgTu7dzMxgBe+752AWFwYCPsb6Y5rrVaWUpPUxyc86LFuT4k/wTNa3aAtU2PPOrER2wz+sJ9Ya69TeEI=,iv:kWAZGDauaNxCJkuhAGJ8VnZ3bBzWg9saPREtWm3gcVs=,tag:HmCO588Rc/AQ55pB+DiOaw==,type:comment]
-    #ENC[AES256_GCM,data:SIVksTL8vFsjPSwt5LyfjQj35DNXTyjGS80jT2SjDqdmrCSqYVXvJYjKqCk=,iv:0UlLe1PJQoofDAynIlOxeluV+YolEq7s92o4PV1Or9U=,tag:3GZRRhrYwERa4NRU4kdxnw==,type:comment]
-    VIP: ENC[AES256_GCM,data:ndl3T/buwbeGy3KIeQ==,iv:FnpGf2U3tUjd7uhlaueLb30TTLzI/lm6MyusSyTp9ec=,tag:PYxaG5QbsKraAA9Cr++yzg==,type:str]
-    #ENC[AES256_GCM,data:jkhVA7+yEnKUEgK9ilf13QSiTjsEfM5HftnZ,iv:V9F98orpCq2Lh8Ikeaimtd2cU5SRhQO7nBVxsmOcViY=,tag:a981Beudt1nPuy9PDcZGHQ==,type:comment]
-    #ENC[AES256_GCM,data:591KGseywRBrX4rZR3Y64kpy6WpglaLrOw3raJFIvt3wT0+iNs4912mrvHA1uzfAjgZDTdBUzAUV97o9psTNb1h6LLec+5aL+vIPjJP5o5lgwNEdwEYeuSs=,iv:+zkyv1xix+6v5UXxqIyWba1n26pY5Nngr/wCGsAbxr4=,tag:kd34rNinV7SZBue+vfbbqw==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:Vr9aQfIbSXcZMM0Yack=,iv:aY13y5Hn99PjpLGd65+OzhZ03eY1DgpNGuo2uCDaGIs=,tag:Wr/izLE14TV3bYMj/glVyg==,type:str]
-    #ENC[AES256_GCM,data:ppL2WcrGQbm1SAW/HuQ1avYlekf/31JralNFA2xtLb5p3A==,iv:KFGzDXp7HATVBjJMwRBlmTjT3J6HjMunbxNO7+trsm0=,tag:laQedS4v27L/zEEJaRQKxw==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:XbpTxsMVKGHJ15+jXA==,iv:B1wzh2Ta5nG4n5dbroEsugDyBZ4G6LnryR/TmuFrMFs=,tag:XXk1AFPcWeulZUrcTABM0w==,type:str]
-    #ENC[AES256_GCM,data:iPhdAm8RU0G2eBRYe0NHvMikeXJVu8pMtU6vCo7VMigNNxUs4BgO6O1ScM51d/0=,iv:eSY5mVIHmbDnhaUshLYmY5wxeS+0WFbCf7EpL+LGdpw=,tag:r2iNgQXJ48iWrcUidgfWfw==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:mlcXKXFGUrK0WHsG0gclUVFhepGLis8Y5v7yzYGDRQ==,iv:7+mCQZsafis0vACb3OglpCLIwEYTfgGKIJcrqe2iw10=,tag:zUxhjl69RuRx806QfZNuqw==,type:str]
-    #ENC[AES256_GCM,data:bzefCnnkjE+y46z0YDUyNTanRddPwfVp09aa1KZQRdlKxFCA+XR5aOBEXTFI4pQHbdWoYuZP/FjUkitO1D6XTMAYvf3JQRGzUnvMYoRua1EWtQ==,iv:HtXcd9SnI5BfPso289+GvKwqUecjnOPwI8FLZ+kzn4U=,tag:C8ChntqLC88VJEA8xC3hbw==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:+zTOcgfvVY5k2JVdjR/U,iv:ku2NtEkNY9Y+SbzgW7bpPkzbya7iQmFyhpGcFK3y7dU=,tag:B7invz/dof/UAtQJetZfNw==,type:str]
-    #ENC[AES256_GCM,data:WgjQqwf/fLnOu91aeC3mZWq1N3i7N87i+FfrnnV+3Enm,iv:D9rrwboscKtu4DuxX11jWaIbgSuPx3KhtQ8P8RL/4cI=,tag:E85NLw5DxSwX3ZN9Qp92Kg==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:lA6EyydMzDwKKpz7hm6G,iv:tiw6lKeac9AfzUzVTk1ZrRep9IHcHkRoJf9hmtpBdRs=,tag:Imi76NvAZrlABJE396ySPQ==,type:str]
-    #ENC[AES256_GCM,data:nouez0K2SAy2N+DZZ1KhVjFvB+yFyoWoxOTmC7CCJlVOI92LfmxEE5fZLRk5PL6LBS14nrN8xOXltwogpklJFdqesr7u0tKcK8dJgYfEQTQ=,iv:hcO5bHQ2JJN0BG6F4cVhGwN0Y6cu7eZLaojwTguzeH4=,tag:pY62HPEir/rHR/F80EagvA==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:HcaYE0Ezzy2xggWmcoej,iv:X0ftkdcn8rP/hJkdhxmfP5Nmqc6yieGmYgtVxMaqiXw=,tag:9+Jnaw9FxNnySBZY/D7oPw==,type:str]
-    #ENC[AES256_GCM,data:8/NVKA95eZdfZdzX6oIu2fvihGHlb9iZBM9C2/ztquQRakQW5rjXLGiLPSy0aYxN2OZ4XoJJxzoQogI6Gy/zHfghy43cKr+pXUlTSRwV9hfPcPHdVngu,iv:fk0jD6TWpnrs8QY/Cx5nkrEFJHxa6It6hwtjOiSt0U0=,tag:J4Ap22iVMUrjJ1mDR5uHzA==,type:comment]
-    #ENC[AES256_GCM,data:QS7Dc8oXNn1tE1Lefip9KzBZfHHGkirblwtjGz/bs488JVTLE/SuwUuOW1jBWKzSdJ7hIl0YX8dsqFGRFinifLxOBBR2Jk21K0xkOj0dhWsW9oOiP23tPDBgUK0jSd/4VSjlMBgutMjePTF6i4a92/yA7IPriLpI824XPA==,iv:lo0l+4d+vjrMoLFM7DY+y/ttgU9Gt+5CIdVSybbQTrY=,tag:0shGWd7wFZU1qNCDvs5BCA==,type:comment]
-    #ENC[AES256_GCM,data:p3K7tYFhyiafOytWgrQpL/a7l+I//7FLSVH/OqIPgFfq6kbXFSl8klk7O0TGIp+VSC5O9+XJ/2xsmx4ChW9ljRXxwq61slW1J2CbXk4Fhrc=,iv:42EAwOSVCA4/SgPE6r9X1hs+8JFpnVLOmWBWar4IIGc=,tag:8IzqaJhV8O5SuubYGDehYw==,type:comment]
-    #ENC[AES256_GCM,data:mjSSwA7bvn0UH8Vv6PzzpnH67N/DbwNsQTus1IK60gTxE1c0DPc1aSeEuhG7d4GNc79uFaCC,iv:bbNN1yapgmF5a2jrzL3DZ04zNtlXRJ9HXZBdwtpWjKg=,tag:w6D3CA2TRMsi7yVFf3hqzA==,type:comment]
-    DDNS_URL: ENC[AES256_GCM,data:FVr/uav0F3YxC71IxPg=,iv:Ww5cXT50FimFEdVr+bBO3JNAE6QfUcUe0qcG+NANTT0=,tag:1+n1xMRJhX8HvwxntzNkJw==,type:str]
-    DOMAIN_0: ENC[AES256_GCM,data:8UpSP37Dypvhwk6Y,iv:W2OOSSUz/1hfdlj4GasUJ9pR66W5LmSdQbbMwD0VmPg=,tag:2oSvdDDy+qFtwRSf1njkSA==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:YbBvhB+3uBbIVjsF46m7xQY=,iv:y4lN5J6KOjU0juSrTdZQmjj53vQiMdvIlldK2XufU6w=,tag:XN9woyaLndM4aDCONCra0A==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:cOY4jukd0Lk5DAo8mGaxqM4tJnctO0N2nc/X4NlW2tr1ZTs0cj28hw==,iv:3h3T7UdxsUtRufocptD+oPKe8gCVqF27MecgZ7nYcTc=,tag:/dGUvLeiAsqJ3P/EqpACyA==,type:str]
-    #ENC[AES256_GCM,data:4w82+Q87Ye+bAn+GluJ4ioT6yJyWyxHvQ3U7n9f1p+c0uxdQRQ8C5X+ihHvyuPSARAKtJrUa80Q=,iv:NI0nPrTj2G/YJwSNDTSXswy7L74VbjzfIVZ0HYtmAP0=,tag:Ln+oK6826i4wlHqIML/+Gg==,type:comment]
-    #ENC[AES256_GCM,data:G7hV24gl0nLmc4Ohra1PsO590QHOj12qxg==,iv:kVDbBxBF6Dh1n/r6YweGQbd3SZSfeO9N3JOqjDq3FqA=,tag:JfGD5S0JfEYsDZnDz/1jeQ==,type:comment]
-    #ENC[AES256_GCM,data:lDLzGbJEZH/gwHSTVMWgDiXCSb1ZNJIqgrKb4h428vdfBtMNQrMj0NP77nVbokOzVzPgc/6mBNGh41tBQs/jvvHD/y4mneO0p99AsME=,iv:NF1p+D9M08n3HiwtsOFo+7sJvrjRVPkEwuMBjwnznZs=,tag:kJULab2BmmD/h9j1U/Tdug==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:9QUji6Ra26Uf0ITzEBFpZIFIwJNXCuRyeQwQz1INOPT3DDLQlQNDexWTl/JGowwY,iv:PoZfIpGWyPLOPOBW6D5zLYWFLsN/rhozfeTm7HP5Tho=,tag:4kB6ubbm5E2jvWcMtG/1rw==,type:str]
-    #ENC[AES256_GCM,data:sZCPPVVIBuR8O1+E6HxGxZcqp6Rs7XcDBcvX99m2XRuGqcwNmO7URRPR6axkdtduq8Fh1NlwcknY1RPbLOfLseyZMNYHMfw=,iv:wobPW2aIDTsbs1tmNlgcBfBgQX3eVZy1AWcB7FqzIHg=,tag:lO5kRzXAiwJo0WwLszj9Gw==,type:comment]
-    #ENC[AES256_GCM,data:B3wHXhIgOgqj7asmP16w/4GTKAmwjMPsShfCBP/nVvLwxdVphhD+2cKrUGeM8CVH6xK8dlP6,iv:atp8QU9Lmi8DRGD+gu26MScoa40yVPt592t6SXdBKQU=,tag:sl/roKKJF8ayhtoAgwqK+Q==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:FdJEpg0OSQ==,iv:qcajmfZM8eGjDhFfv44I3iQxRkJDCyiB/rc5e0IpVvo=,tag:kVtY8jCAYiIdrW8Q/a0dAw==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:Cd5BikrZjeVVEe/A8hWfHnv58Eo=,iv:Y0ert8QM0Qukn5UQP9ayDilphVzh3a4WHNco+rtSFjU=,tag:wTgbAwM1PerNL4yZ0EDP9A==,type:str]
-    #ENC[AES256_GCM,data:gbGa+IfYWXKKjDexZkU=,iv:cP1DWzFbeeMWbtI2OoupDssNv7UfnBr+ilnoAe/StHo=,tag:87dD9dspnRiqWacU4YfTtA==,type:comment]
-    PODNET: ENC[AES256_GCM,data:n+toLub9oQ/vT9Bztg==,iv:+mE4R1NYrY6Llrr3OmaZIIh6QDWDWsS8vxxKVkZoG8I=,tag:ptBaXRkQPZHY3jANesDjuA==,type:str]
-    SVCNET: ENC[AES256_GCM,data:OxzDbyBV7qjGVc0NuA==,iv:NdHJscnIg7T0AsKktSk567hpXqA+qOVqRlj+VotPwbI=,tag:0820mMvFQ5meTI7M8cNQ4A==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:GSLkQA==,iv:ctpwLVNmawMiuxZYbrkZZOuc/i/2nY1qXExZshy1MF8=,tag:OU7Ft6DfCLooed4FWFh7SA==,type:str]
+    #ENC[AES256_GCM,data:Hrs64d+UgJ/rIgYYxb2Z50I6h2vnS1pWCYkZDUV6k4cv8TkckcFehEDnr5DBDB1mk8hOPHFuhAfP2fy0/4m+pOM=,iv:a1HBYxeVpenGhEXkgowDxb9Th/Euyg6IIDeQa4asnMA=,tag:gSlCyYLJjtqAgxtCdAWVtA==,type:comment]
+    #ENC[AES256_GCM,data:eRjAsSsyQRTFbyQEXfcsUI+jaj6ucvVEAddV2jscNSJdVeo9AjJ2MI9zqNA=,iv:KziAoN7UUfbKR6RoNi9hebbOtxhkoHKYhjbzjMthRRw=,tag:pZdD10uXY5GuqNSag0MAJA==,type:comment]
+    VIP: ENC[AES256_GCM,data:UUdjTN93w6iQ70Lm9Q==,iv:HeoUZph0NCmq0fIJNmeOGprKf3w3Yl6AztKQHHDqa+8=,tag:Z+wpWnmTvoDYp7ot7rJW4g==,type:str]
+    #ENC[AES256_GCM,data:hIXgqAxkSsimu5kPGu7HFbsN2o+qGAMxRMyC,iv:dKf8+zRXxK1HALWFUq1OdD6nTY8FxuUJGjjZlPbG3ws=,tag:w9ra+v9rg919+grpSsp9pQ==,type:comment]
+    #ENC[AES256_GCM,data:m5IndS7Jqn1kgS7gWk04QFTl9QfS2E6xlMedVmCCV/XjJdewds9NuutQiZEhNdKLSBS/ApOpvoZSKvvYWabk/8YLLj/1zfasY3SU2eVPgqAX0IPjiMjlq+E=,iv:DyD9VC5CRVBF7+hKkF+TlPhEUpUQb7hf8T/laeiTpbA=,tag:pE3l97jRV3wkv7qN3f+47w==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:eT+lHXdY5ty7qxH1vj8=,iv:aCiBJgpH8PPgJ6hbPUrOPM4vU+54qyeBCRD8N1rd9cc=,tag:F1mNsNI4N/bN0RTY4W3Oqg==,type:str]
+    #ENC[AES256_GCM,data:ez/zpE3QfJauDdiWklpmEk7jCyJ7FAvJoxqiHGSCy+hd3A==,iv:tNoFwxywPYI/B0ImiB6VH2yNxgbNwpw3ZnhRrxEs9io=,tag:bBesfKCraiRj7D5C41Om0w==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:AnkJphCUK09DjU6xBQ==,iv:QFhmuJhsNR18fmaqfTXX6yA0stHYYgah+OAB6po26iU=,tag:JfI52S6RxiSjTlTMsR0MsQ==,type:str]
+    #ENC[AES256_GCM,data:Yb57kvMhKxVFNyfHdWUE3nxkjeiSpD62TdE8G1eH4PYvvjFmbMXPnU9UJB4W00w=,iv:p8y7SUjG+6EusESJYeeKRlBrFAIiwMQK6hnw5he6/3g=,tag:nxNJJvw2Gq3lrMMNYA6fXg==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:HfBIOqRmBxH2t5HRoQaCByRjuU+/DtLfcA3rQl0Cog==,iv:fmg/a8UWcWfrRYAwzY9b0H8zeuuBL0JiisASoL11pCU=,tag:++59KNtHZJZVGtrCEzdZEw==,type:str]
+    #ENC[AES256_GCM,data:PTycmPdvB6b3asLitHGBjNO9uEis85tFPPx+d+nG40aWsiLgJSxJCSSQnzmLeyjpbRowN5Dk81fd5WSCu3VvHVxa48xmB/R9Cc6GJVg1835ouQ==,iv:PwIFx0IHqsBsc+RuWkwoW5os87yflj1BsBukBQU0QZY=,tag:kclwvboM3xskdkwSpeDCvw==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:/rYynST8eVuv4fDSwzvc,iv:YQTCzyO70Q9aOX8mNa94TzdHJF6CV0gxsQNywPmju0s=,tag:CZ1T5IEXL/SVgWBB9WBuuw==,type:str]
+    #ENC[AES256_GCM,data:qnBXstYD8YVgd+n4zKkFNZs6zn3JkfSZrk/nKQCbp20z,iv:raShY4rTpXDJul8S8Y+PvsYDzhGnBFxuzVU2ViX6Nec=,tag:MXo9xfbWfN+vRxCwagP4rQ==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:Icxssp5FjXTTi2M7UEwQ,iv:ZGvckcDB+KPR/U0A4NIzHQZE2OTi9Vphgh6w0bRtq1A=,tag:9nXC7bHH0+TC56WLZVAvag==,type:str]
+    #ENC[AES256_GCM,data:HhxDK0m8deyrPcp/0qynxJA6up4eAJ9NsKDH/ewkd9RC5K2JNqjlxGlVxdsUe69eBw/uoqIS4M85zNkABCuilNtEyGGSEvA4yKoir27E+Hk=,iv:/ySvzHCck5Q1eY6hRGkGJAjO2Hu+BayvDPLfAevR8Kk=,tag:tHETjzHyyBYq8NIDAsL26w==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:FcmspOIS7VQxo/TO5PK4,iv:K4jHRA7+v783matXgzqVtIMmKHQtnOgovpjqyGYxhSE=,tag:D1UdXqSdyuTImfdg6bQOiA==,type:str]
+    #ENC[AES256_GCM,data:W6grq9IzT906IgKnK9cMRjIEo7pMWvekYj4ScVD8MorlJidka9r9C4oDGPigqiXc9T7eCR+d4M2m+Ae9VCJ5uXRuM0Doiy0+GHQOqP3xXEyTPD3wvf8i,iv:N1OqhO+3R0BYNTiaHw4jB299qSJv+yOnCHSW28KLSa8=,tag:tJiA5lMKTXXnq7HQWmMklA==,type:comment]
+    #ENC[AES256_GCM,data:KEHqKgp5LjeO8c2evaq610fxZeBFujGG2Vjc15ukRmodR5edKLmvVa5NvkqLpsKtdl8D19vJ29x1tZMZoYImyv8iFvto4vEonIiLYCH5XSWmgOGEr9Yky+C9WDxz3zhaeoqCqrMwICikDCCV5fX+yL3TkCartOiDStxjow==,iv:8kVEx1y011sO5iVRrn9SVsL9PvPbbUuO2Zqp1C68sao=,tag:9UIcO4GYQJsCaQJHtU0v8g==,type:comment]
+    #ENC[AES256_GCM,data:3zB1mJ4GmDHmMrrXtz4MQV2VBCLzFw/NhsY8jB86XG4hXC+v2Z7swPs4xduOeoDdjBImZeKMoO3oIyMCXon3RH50VMzGfV7T/0pvnmlCqhs=,iv:JAsRMCpN50FUSYYB1zCKZ/8udTBG0279IlcAV6q3VE4=,tag:aX5cKyiE/umVBT/k2nfYfw==,type:comment]
+    #ENC[AES256_GCM,data:eMrrCkRe/CzArk3MihXdVyNJ1maAX4pAvNZhmN+wDN5+tTdpR6NE8kb6q5bJ8B9kneaoblrp,iv:sNF4PiSJ39fLClGRHB/xdRnvLFcQpuqiqA7lwNgNC+o=,tag:GYynb/trZKmR+MKpz/oegg==,type:comment]
+    DDNS_URL: ENC[AES256_GCM,data:PmOEbqy0cCCPYPkHIW8=,iv:ZFnMM/tEO+sfQi9hXnZqPe8OOM3SMSTNkCJEwIiFPNw=,tag:97NYnRjf6KORs3BrcTupuQ==,type:str]
+    DOMAIN_0: ENC[AES256_GCM,data:YLw9EGW3sJfeYC3J,iv:sBfx58iOnojS3v625jIG0OjQuD2UmRSRN4qt3GLOumE=,tag:3fe72m/PwSUzC+GAnqWbZQ==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:beGeL9OPu8Vks6Ak+B802h0=,iv:HjjLqFZ18EUk0lfuKU8Uwr0VY0oMwDHKeSw3QQwsofA=,tag:aYVdxb5brXWeHy0pfpxxLQ==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:VTyBKUhDlPeI7P3CggsxM9AFonr59GGvhQzvdWZjardy1TiQH4zCOQ==,iv:ueqCOzfpqlxK7NvlvWCjh/l8De5jbXoxVyPl5nDKH+A=,tag:3OmdQMal3K3SR/Xr3otCeA==,type:str]
+    #ENC[AES256_GCM,data:N97HCHWzLltlYCeoNiGGRomvrHOVGXyZDENClBDkUukJ0dp3Rl0cDg1HTguMAgdLKPvI7hwwfZg=,iv:xEnYGqnqR9AVNLU00zhz40foEsDsuqw+z5JschgocDY=,tag:LrydzP4byFKoanjWy3Y0BQ==,type:comment]
+    #ENC[AES256_GCM,data:2Oc9gYVQbt4s0m8cGUe8aCjfE2J94fit6w==,iv:bxewRt3xbwQ+e4tfxwRVdnIo6XwBGiPINTnjeS/2FlI=,tag:E3n+hL53L6FBLtH/uRWc1w==,type:comment]
+    #ENC[AES256_GCM,data:MBzqc80TtPk8EaAei1eqhlRetMVnzrnnW6JUeBIfawq3YhjsRAY+cDwszVkSZsDwqg18md7K9obpNs8e/dXoQ4ms5fh+dgd/LnQcCZc=,iv:PGXMP1os0VrHWkvbo9nvN7AtfritgdL2nH8i4PnH3yY=,tag:SQNtSj3SgRvUIZ5lPI06+Q==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:3SyMNpOBDJXEATX3y3HX7KBl8InHI4Ms+4nyMwwpKCkekouJAUY5GAUvCm2E/qzC,iv:wN4nctlKY9hbrrwR2OXltt2JA6xX9ISTIdPxQBbz29k=,tag:r3IMRN8Q9nR9wxCH59AGvw==,type:str]
+    #ENC[AES256_GCM,data:gLxYM/YVrvH1z9SjREuE2n+3UHgzvMObF897JFacTFSSMs0L0aYG+wRg69NvKfv8DmsyJL98qro1yFZXczSljzrfNmxIH0I=,iv:p4h8xXLrce0u3PkpV2sHFNflc9xg2O5+ImCCmNe/GV4=,tag:Gr502gNrtTSoDfSVN4dKMA==,type:comment]
+    #ENC[AES256_GCM,data:ptPhS6eGq0ptxuoIWJUVlH6KAZcSJmjwBGkceOl6R5KrdAnmEWyEUD0fxGgRomDqSLTpxg1p,iv:3GO/sq2TKQ6SZrbXsrVdkPZAlPPe5AcdmFwuB/1T7v0=,tag:x0AGNZDmQXQ7PB6F0S97lQ==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:fr+5cDWAHQ==,iv:26o9RPeoNl0xDTHhVqAHybr3VOEgPImmo4PEg6hl+l4=,tag:mll4Wv9+sfpwQo5QtHkvzA==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:1gyc8f6sG91I4Fbr3xxs4ptT6B8=,iv:nGUtFE4Nlu/fQeneNYQ5rjTiKo0hR0+abl+E2QuSJl0=,tag:fiaGgr8kjAyaFGtYlcHMog==,type:str]
+    #ENC[AES256_GCM,data:3rOekJWZeiwUHLAQFg8=,iv:z377re8DKYMngUliW6o99T+JccFjhCpME0PN8PPUvCE=,tag:HRwhKq0+gJSlH7LvedqFjw==,type:comment]
+    PODNET: ENC[AES256_GCM,data:qU58Rl3UfSnJ8spFSA==,iv:VKwwBkZT0BpJ0IG8jN14rHkpQVO+oALAOWOKs1MoCTE=,tag:rvPH6CXDan9Qhf/OsXrfiA==,type:str]
+    SVCNET: ENC[AES256_GCM,data:tVYOepiuoL5b5H1xSA==,iv:GaclvDpSjlj3I2+bTXj6D7etoqCc1LPJ2OV6fR2SiIA=,tag:HFK2M/t/1hUBPpiYaYiWog==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:D+dUog==,iv:/8akgNaUKe88ox2S8DL/KlmDPnNgncjHClG7jIbQlVs=,tag:yqyoeyTL05rsS8gqtWEZ1w==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,14 +50,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByUFYza3ozWWFkd2ZqbFdn
-            eHVnOGpFVVZkc1QwaW03K2ZqVXpGdkhaQVRrCkxNNDIvTC9aWXlrM3JVanI3REhJ
-            QWdEZzF3MlVYczRlQ1d0RS9qSDQ0NlUKLS0tIGNnM3VsbTI3a29yekFucFN3R1dp
-            Q0o4Rit4WXlZVnhEUXpSM1hCdmg5bGMKa0gNVxnk6v77niHi/isel8JFfC5mCKH4
-            HKl+l9AMo12Vkjeyco0wfw3ZFZDGcp+SmRV+WVwqchbjK3qqug6VbQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNQlYyRCtnWWs2Nk55TSsy
+            TFk5dnFMNkZ5RG1EUVByZkpEUTJNSUVUNGxnCjN1NmQ1Qm5nMXlkWWRuUTRNTXZP
+            QUpicGxGSGRxbjhoaTE5UlRPSnFibDAKLS0tIGhiaGNCUzJnZjEyTGJkYUhndkxx
+            NmJsNzhFVEFweHcvc0Rzd1p5KzFOdVkKHc+5ZFoNgyu7tgz6gcwe95cvjva1F9OJ
+            QO26LBsLJnUVIbcLgZ7NTNFcQ5ibDJdwjV3oYimaYMjHqzve+GIOfA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-25T15:47:32Z"
-    mac: ENC[AES256_GCM,data:gjN7T0UBqlZRe+ODKbQYxQIIxrVa3C4NEBzLemzON2LKqKPqT0K8I6xsLhYZSQdEFxHc/DQqw/oSnaHCNI8zCmU4e6CZjwpRkq7QH+UjkXaoWbwxcnuiQb1R1m5HvkZ4VAirgNvH+xq3tjqYXYlg+FUPVA6atQ7rMgs9OAqgSPI=,iv:2PHv6WN+Uo/cspkDsuM2nZwCDyeVKz+PWC+KESrDO7Q=,tag:bXaEHzYARrvzsI+CskSy3w==,type:str]
+    lastmodified: "2024-12-27T00:35:50Z"
+    mac: ENC[AES256_GCM,data:i1MYWYcDPd2fn9PJs0ECSKNADHyrMQWc0fz6p/yssV4huooLC8OwZHV29pPzLSAIkRxuDQl+xt438QrW/fWt1yt8IUuzyGo+g+VP0CkosYnTcUnlmNqgEcqvVaKOtOpt4sZtQkFWa3zx83vIMimhZvBU6iY7ORjP9P82f9cteo4=,iv:i+HUUAyRc0e8dXFVojxiydz1pmpymOx7g0mOJk3HrDc=,tag:J+AbgmE0HkzQ6Yx2Nd6wrw==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
